samples/_failures_safe/1761266483_97a560_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38555548.c: In function ‘main’:
./samples/SAFE/__tmp_38555548.c:142:5: error: expected declaration or statement at end of input
  142 |     printf("=========================\n");
      |     ^~~~~~
